<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_small"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_empl_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_employee_function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_empl_function"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_employee_name" />

    <TextView
        android:id="@+id/tv_employee_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_empl_email"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_employee_function" />

    <CheckBox
        android:id="@+id/checkbox_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:buttonTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        tools:layout_editor_absoluteY="5dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@+id/tv_employee_email"
        />

</androidx.constraintlayout.widget.ConstraintLayout>