<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/item_list_meeting_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/circle" />

    <TextView
        android:id="@+id/item_list_meeting_meetingname"
        android:layout_width="@dimen/itemlist_tv_width_object"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/itemlist_meetingname"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:textStyle="bold"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/item_list_meeting_avatar"
        app:layout_constraintTop_toTopOf="@+id/item_list_meeting_avatar" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/itemlist_tv_height"
        android:text=" - "
        android:textStyle="bold"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintStart_toEndOf="@+id/item_list_meeting_meetingname"
        app:layout_constraintTop_toTopOf="@+id/item_list_meeting_avatar"
        />

    <TextView
        android:id="@+id/item_list_meeting_startime"
        android:layout_width="@dimen/itemlist_tv_width_time"
        android:layout_height="@dimen/itemlist_tv_height"
        android:text="@string/itemlist_meetingtime"
        android:textStyle="bold"
        android:textSize="@dimen/textsize_medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/line1"
        app:layout_constraintTop_toTopOf="@+id/item_list_meeting_avatar"
        />
    <TextView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/itemlist_tv_height"
        android:text=" - "
        android:textStyle="bold"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintStart_toEndOf="@+id/item_list_meeting_startime"
        app:layout_constraintTop_toTopOf="@+id/item_list_meeting_avatar"
        />

    <TextView
        android:id="@+id/item_list_meeting_roomname"
        android:layout_width="@dimen/itemlist_tv_width_room"
        android:layout_height="@dimen/itemlist_tv_height"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/itemlist_meetingroom"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/line2"
        app:layout_constraintTop_toTopOf="@+id/item_list_meeting_avatar" />

    <TextView
        android:id="@+id/item_list_meeting_useremail"
        android:layout_width="@dimen/itemlist_tv_width_email"
        android:layout_height="@dimen/itemlist_tv_height"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/margin_standard"
        android:paddingTop="2dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/textsize_smallmedium"
        android:text="@string/itemlist_meetingguest"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_meeting_avatar"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/item_list_meeting_avatar"
        app:layout_constraintTop_toBottomOf="@+id/item_list_meeting_meetingname"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_meeting_avatar"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_list_meeting_avatar"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
